--- a/views/labHome.html
+++ b/views/labHome.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Login Form Tutorial</title>
+		<title>Login Form</title>
 		<style></style>
 	</head>
 	<body>
