--- a/views/testCollection.html
+++ b/views/testCollection.html
@@ -20,14 +20,59 @@
   </form>
   <table id="displayResults">
     <tr>
+      <td></td>
       <td>Employee ID</td>
       <td>Test Barcode</td>
-      <td>Delete</td>
     </tr>
   </table>
+  <INPUT type="button" value="Delete Row" onclick="deleteRow()" />
   <div id="temptest"></div>
     </body>
     <script>
+
+      // function deleteRowFunc(clicked_id){
+      //     var xhttp = new XMLHttpRequest();
+      //     var testBarcodeId = clicked_id
+      //     var table = document.getElementById("displayResults");
+      //     xhttp.onreadystatechange = function() {
+      //     if (this.readyState == 4 && this.status == 200) {
+            
+      //     }
+      //   }
+      // }
+
+
+      function deleteRow() {
+			var table = document.getElementById("displayResults");
+      var rowCount = table.rows.length;
+      var testBarcodeId = "";
+
+			for(var i=0; i<rowCount; i++) {
+				var row = table.rows[i];
+				var chkbox = row.cells[0].childNodes[0];
+				if(null != chkbox && true == chkbox.checked) {
+          testBarcodeId = table.rows[i].cells[2].innerHTML;
+					table.deleteRow(i);
+					rowCount--;
+          i--;
+        }
+      }
+
+      testBarcodeIdString = {
+        testBarcode : testBarcodeId,
+      };
+
+      var xhttp = new XMLHttpRequest();
+      xhttp.onreadystatechange = function() {
+        if (this.readyState == 4 && this.status == 200) {
+          alert("Deleted Successfully")
+        }
+      }
+      xhttp.open("POST", "http://localhost:3000/deleteTestCollection", true);
+      xhttp.setRequestHeader('Content-Type', 'application/json; charset=UTF-8');
+      xhttp.send(JSON.stringify(testBarcodeIdString));
+		}
+
 
       async function onsubmitFunc(e) {
         e.preventDefault();
@@ -63,9 +108,14 @@
               var table = document.getElementById("displayResults");
               var row = table.insertRow(table.length);
               var cell1 = row.insertCell(0);
+              var element1 = document.createElement("input");
+                element1.type = "checkbox";
+                element1.name="chkbox[]";
+                cell1.appendChild(element1);
               var cell2 = row.insertCell(1);
-              cell1.innerHTML = form.querySelector('input[name="labId"]').value;
-              cell2.innerHTML = form.querySelector('input[name="password"]').value;
+              var cell3 = row.insertCell(2);
+              cell2.innerHTML = form.querySelector('input[name="labId"]').value;
+              cell3.innerHTML = form.querySelector('input[name="password"]').value;
               //  document.getElementById("temptest").innerHTML = document.getElementById("temptest").innerHTML + "Employee Id: " + aObjs[i].employeeId + "&nbsp Test Barcode: " + aObjs[i].testBarcode + "<br>";
       }
 
@@ -95,9 +145,14 @@
               var table1 = document.getElementById("displayResults");
               var row1 = table1.insertRow(table1.length);
               var cell11 = row1.insertCell(0);
+              var element11 = document.createElement("input");
+                element11.type = "checkbox";
+                element11.name="chkbox[]";
+                cell11.appendChild(element11);
               var cell21 = row1.insertCell(1);
-              cell11.innerHTML = aObjs1[i].employeeId;
-              cell21.innerHTML = aObjs1[i].testBarcode;
+              var cell31 = row1.insertCell(2);
+              cell21.innerHTML = aObjs1[i].employeeId;
+              cell31.innerHTML = aObjs1[i].testBarcode;
               // document.getElementById("temptest").innerHTML = document.getElementById("temptest").innerHTML + "Employee Id: " + aObjs1[i].employeeId + "&nbsp Test Barcode: " + aObjs1[i].testBarcode + "<br>";
             }
         }
@@ -105,6 +160,7 @@
       xhttp.open("GET", "http://localhost:3000/getData");
       xhttp.send();
     }
+    
 
   </script>
 </html>
