--- a/views/employeeLogin.html
+++ b/views/employeeLogin.html
@@ -9,8 +9,8 @@
     </h1>
     <div id="EmployeeId"></div>
     <form id="formElem">
-        <input type="text" name="email" value="testing@gmail.com">
-        <input type="text" name="password" value="password">
+        <input type="text" name="email" value="jasonwang123@gmail.com">
+        <input type="text" name="password" value="dannyzhang">
         <input type="submit">
     </form>
 </body>
