--- a/views/wellTesting.html
+++ b/views/wellTesting.html
@@ -61,8 +61,10 @@
                 cell11.appendChild(element11);
               var cell21 = row1.insertCell(1);
               var cell31 = row1.insertCell(2);
+              var cell41 = row1.insertCell(3);
               cell21.innerHTML = aObjs1[i].wellBarcode;
               cell31.innerHTML = aObjs1[i].poolBarcode;
+              cell41.innerHTML = aObjs1[i].poolResult;
               // document.getElementById("temptest").innerHTML = document.getElementById("temptest").innerHTML + "Employee Id: " + aObjs1[i].employeeId + "&nbsp Test Barcode: " + aObjs1[i].testBarcode + "<br>";
             }
         }
@@ -110,8 +112,10 @@
                 cell1.appendChild(element1);
               var cell2 = row.insertCell(1);
               var cell3 = row.insertCell(2);
+              var cell4 = row.insertCell(3);
               cell2.innerHTML = form.querySelector('input[name="wellbarcode"]').value;
               cell3.innerHTML = form.querySelector('input[name="poolbarcode"]').value;
+              cell4.innerHTML = "in progress"
               //  document.getElementById("temptest").innerHTML = document.getElementById("temptest").innerHTML + "Employee Id: " + aObjs[i].employeeId + "&nbsp Test Barcode: " + aObjs[i].testBarcode + "<br>";
       }
       function deleteRow() {
@@ -123,7 +127,7 @@
 				var row = table.rows[i];
 				var chkbox = row.cells[0].childNodes[0];
 				if(null != chkbox && true == chkbox.checked) {
-          wellBarcodeId = table.rows[i].cells[2].innerHTML;
+          wellBarcodeId = table.rows[i].cells[1].innerHTML;
 					table.deleteRow(i);
 					rowCount--;
           i--;
